<resources>
    <string name="app_name">果子TV</string>
    
    <string name="zhuyan">主演：%1$s</string>
    <string name="daoyan">导演：%1$s</string>
    
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
		this device.</string>
    <string name="VideoView_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>    
    <string name="init_decoders">正在进行第一次解压解码包...</string>
    <string name="insert_SDcard">请插入SD卡，否则将无法正常显示影片图片</string>
    <string name="wait_for_init_data">数据正在加载，请稍候...</string>
    <string name="error_for_init_data">加载数据失败！</string>
    <string name="error_for_get_data">获取数据失败！</string>
    <string name="anomaly_for_network_link">网络链接失败，请检查网络是否正常</string>
    <string name="yidenglu">已登录</string>
    <string name="wait_somethings">请稍等...</string>  
    <string name="data_error_try_again" >数据错误，请重试！</string> 
    <string name="Current_video_format_is_not_supported" >不支持当前视频格式，请尝试其他线路</string>
    <string name="get_on_a_page ">获取上一页</string>
    <string name="is_the_first_page ">已经是第一页了</string>
    <string name="get_the_next_page">获取下一页</string>
    <string name="no_more_lines">已无更多线路</string>
    <string name="wait_for_automatic_switching_circuit">自动切换线路,请稍等...</string>
	<string name="wait_for_getting_data">正在获取数据，请稍等...</string> 
	<string name="account_password_can_not_be_empty">帐号密码不能为空</string>
	<string name="login_success">登录成功</string>
	<string name="Logon_failed_try_again">登录失败，请重试!</string>
    <string name="wait_for_Logining">登录中，请稍候...</string>
    <string name="small_letter">小写</string>	
    <string name="capital_letter">大写</string>
    <string name="mark">符号</string>
    <string name="space">空格</string> 
    <string name="delete">删除</string>  
    <string name="empty">清空</string>  
    <string name="Has_collected">已收藏.</string>
    <string name="cancel_collected">已取消收藏.</string>
    <string name="scoring_functions_are_not_enabled">评分功能暂未启用，请期待新版哦.</string>
    <string name="search_result_is_empty">搜索结果为空.</string>
    <string name="automatic_login_successful">"自动登录成功.</string>
    <string name="search_key_hint">请输入搜索关键字</string>
    <string name="dialog_message_exit">退出</string>
    <string name="playbill">节目单</string>
    <string name="title">title</string>
    <string name="message">message</string>
    <string name="left">left</string>
    <string name="right">right</string> 
    <string name="account">帐号</string>
    <string name="password">密码 </string>
    <string name="Login">登录</string>
    <string name="exit">退出</string>
    <string name="zero">0</string>
    <string name="one">1:00:00</string>
    <string name="filename">filename</string>
    <string name="TextView">TextView</string> 
    <string name="By_area">按地区</string>
    <string name="By_time">按时间</string>
    <string name="Repeat_password ">重复密码</string>
    <string name="register">注册</string>
    <string name="already_logged_in">已登录</string>
    <string name="logout">登出</string>
    <string name="about">关于</string>
    <string name="wait_for_connecting_to_server">正在连接服务器，请稍等</string>
    <string name="Email">Email</string>
    <string name="radioButton">RadioButton</string>
    <string name="name">name</string>
    <string name="tv_play_next">加载时间过长,即将播放下一频道...</string>
    <string name="tv_next">即将播放下一频道...</string>
    <string name="tv_last">即将播放上一频道...</string>
    <string name="is_the_first_channel">已经是第一个频道</string>
    <string name="is_the_last_channel">已经是最后一个频道</string>    
    <string name="progressDialog_title">加载信息...</string>
    <string name="progressDialog_info">正在加载，请稍等......</string>
    <string name="network_error">网络异常，请确认网络是否正确连接！</string>
    <string name="soft_update_no">已经是最新版本</string>
	<string name="soft_update_title">有最新版本，是否更新到最新版本</string>
	<string name="soft_update_detail">更新内容：</string>
	<string name="soft_update_info"></string>
	<string name="soft_update_updatebtn">更新</string>
	<string name="soft_update_later">稍后更新</string>
	<string name="soft_updating">下载</string>
	<string name="soft_update_cancel">取消下载</string>
	<string name="hot">热门</string>
	<string name="yangshi">央视频道</string>
	<string name="gesheng">各省卫视</string>
	<string name="difang">地方节目</string>
	<string name="zonghe">综合频道</string>
	<string name="qita">其他</string>

</resources>
