<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="6" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/setting" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/reg"
                style="@style/btn_text"
                android:layout_width="130dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="20dip"
                android:focusable="true"
                android:text="@string/register"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/login"
                style="@style/btn_text"
                android:layout_width="130dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:focusable="true"
                android:text="@string/Login"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/yidenglu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="10dip"
                android:focusable="true"
                android:text="@string/already_logged_in"
                android:textColor="@android:color/background_light"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/logout"
                style="@style/btn_text"
                android:layout_width="130dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dip"
                android:focusable="true"
                android:text="@string/logout"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/about"
                style="@style/btn_text"
                android:layout_width="130dip"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:text="@string/about"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="3" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fav" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <GridView
                android:id="@+id/shoucang"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:numColumns="3" >

            </GridView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="2" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/history" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/history"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            </ListView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>