<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="3" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:padding="20dip" >

                    <GridView
                        android:id="@+id/gridView1"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:numColumns="6" >

                    </GridView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dip"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="@android:color/background_light"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_dark"
                android:singleLine="true"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@android:color/background_light"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@android:color/background_dark"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Repeat_password "
                android:textColor="@android:color/background_light"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/pwd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@android:color/background_dark"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Email"
                android:textColor="@android:color/background_light"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@android:color/background_dark" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/reg"
                style="@style/btn_text"
                android:layout_width="130dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="20dip"
                android:focusable="true"
                android:text="@string/register"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/quit"
                style="@style/btn_text"
                android:layout_width="130dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:focusable="true"
                android:text="@string/exit"
                android:textSize="25sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>