<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >
    <!--     android:layout_alignParentBottom="true"
    android:layout_marginBottom="0.0dip"
    android:layout_marginLeft="0.0dip"
    android:layout_marginRight="0.0dip"
    android:background="@drawable/mediacontroller_bg" -->
    
    <ImageButton
        android:id="@+id/ibt_pause_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/big_pause_imagebutton_bg" 
        />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="90.0dip"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:id="@+id/mediacontroller_player"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/mediacontroller_bg"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:orientation="horizontal" >

                <ImageButton
                    android:id="@+id/mediacontroller_prew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#000000"
                    android:contentDescription="@string/mediacontroller_play_pause"
                    android:gravity="center"
                    android:scaleType="center"
                    android:src="@drawable/mediacontroller_prew_button" />
                <!-- 播放暂停键 -->

                <ImageButton
                    android:id="@+id/mediacontroller_play_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#000000"
                    android:contentDescription="@string/mediacontroller_play_pause"
                    android:gravity="center"
                    android:src="@drawable/mediacontroller_pause_button" />

                <ImageButton
                    android:id="@+id/mediacontroller_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#000000"
                    android:contentDescription="@string/mediacontroller_play_pause"
                    android:gravity="center"
                    android:src="@drawable/mediacontroller_next_button" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dip"
                android:layout_marginLeft="7.0dip"
                android:layout_marginRight="7.0dip"
                android:layout_marginTop="2dip"
                android:layout_weight="4.5" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/mediacontroller_time_current"
                        style="@style/MediaController_Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/zero" />

                    <TextView
                        android:id="@+id/mediacontroller_time_total"
                        style="@style/MediaController_Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/one" />
                </RelativeLayout>

                <SeekBar
                    android:id="@+id/mediacontroller_seekbar"
                    style="@style/MediaController_SeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:focusable="false"
                    android:max="1000" />

                <TextView
                    android:id="@+id/mediacontroller_file_name"
                    style="@style/MediaController_Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:text="@string/filename" />
            </RelativeLayout>

            <LinearLayout 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="0.1"
                android:orientation="horizontal">
                
            <ImageButton
                android:id="@+id/mediacontroller_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:contentDescription="@string/mediacontroller_play_pause"
                android:gravity="center"
                android:src="@drawable/mediacontroller_unfold_button"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/mediacontroller_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:contentDescription="@string/mediacontroller_play_pause"
                android:gravity="center"
                android:src="@drawable/mediacontroller_set_button" />
                
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>